Fix layout bugs

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 30px;
 }
 
 .main {
@@ -13,7 +12,7 @@
 
 h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 3.5rem;
   height: 10%;
 }
 
@@ -22,6 +21,11 @@ button {
   height: 10%;
   cursor: pointer;
 }
+
+#new-book {
+  font-size: 3rem;
+}
+
 #container {
   overflow-x: hidden;
   overflow-y: auto;
@@ -30,7 +34,9 @@ button {
   background-color: rgb(100, 100, 100);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: 300px;
+  grid-auto-rows: 300px;
+  gap: 1rem;
 }
 
 /*dynamically generated elements*/
@@ -38,38 +44,24 @@ button {
 .book {
   background-color: blueviolet;
   border: 2px solid rgb(255, 255, 0);
-  border-radius: 5px;
+  border-radius: 1.5rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  overflow: hidden;
 }
 
-.title {
-  border-radius: 5px 5px 0 0;
-  height: 25%;
+.title,
+.author,
+.pages,
+.read,
+.delete-btn {
+  overflow-y: auto;
+  height: 20%;
   width: 100%;
   text-align: center;
-  font-size: 25px;
-}
-
-.author {
-  height: 25%;
-  width: 100%;
-  text-align: center;
-  font-size: 25px;
-}
-
-.pages {
-  height: 25%;
-  width: 100%;
-  text-align: center;
-  font-size: 25px;
-}
-
-.read {
-  height: 25%;
-  width: 100%;
-  text-align: center;
-  border-radius: 0 0 5px 5px;
-  font-size: 30px;
+  font-size: 1.3rem;
 }
 
 .read.yes {
@@ -77,22 +69,12 @@ button {
 }
 
 .read.no {
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(255, 80, 80);
 }
 
 .delete-btn {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 30px;
-  height: 30px;
-  padding: 0;
   background-color: rgb(200, 0, 0);
-  content: url(./images/delete.svg);
-  display: flex;
-  justify-content: stretch;
-  align-items: stretch;
-  overflow: hidden;
+  position: relative;
 }
 
 /*BOOK CREATION FORM*/
@@ -130,13 +112,15 @@ input[type="text"],
 input[type="number"] {
   display: block;
   width: 80%;
+  font-size: 1.3rem;
 }
 
 li.radio {
   flex-direction: row;
   justify-content: center;
-  gap: 30px;
+  gap: 3rem;
 }
 #confirm-btn {
   height: fit-content;
+  font-size: 2rem;
 }
